# qcolor

./: .gitignore  CHANGELOG  README.md  meson.build
src/: qcolor.cc
